--- a/frontend/src/pages/OrdersPage/components/DishItem/DishItem.module.scss
+++ b/frontend/src/pages/OrdersPage/components/DishItem/DishItem.module.scss
@@ -5,6 +5,7 @@
   background-color: $colorContentLight;
   padding: 0 10px;
   height: 50px;
+  min-height: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
