--- a/frontend/src/pages/OrdersPage/components/OrderCard/OrderCard.module.scss
+++ b/frontend/src/pages/OrdersPage/components/OrderCard/OrderCard.module.scss
@@ -1,4 +1,5 @@
 @import "../../../../scss/variables.scss";
+@import "../../../../scss/mixins.scss";
 
 .order-card {
   width: 350px;
@@ -14,7 +15,7 @@
 
 .head,
 .list {
-  padding: 0 10px;
+  margin: 0 10px;
 }
 
 .head {
@@ -37,4 +38,5 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  @include scrollbar();
 }
